Add custom CSS via PaperMod method

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,8 @@ title = 'InvestMuse Blog'
 theme = 'PaperMod'
 
 [params]
+  assets.customCSS = ["css/extended.css"]
+  
   [params.homeInfoParams]
     Title = "InvestMuse Blog"
     Content = "Professional investment analysis insights, tips, and market intelligence"
