Update to Clarity theme and new configuration

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,34 +1,19 @@
 baseURL = 'https://investmuse.io/blog'
 languageCode = 'en-us'
 title = 'InvestMuse Blog'
-theme = 'PaperMod'
+theme = 'clarity'
 
 [params]
-  assets.customCSS = ["css/extended.css"]
+  brand = "InvestMuse"
+  introDescription = "Professional investment analysis insights, tips, and market intelligence"
+  logo = "/images/logo.png"
   
-  [params.homeInfoParams]
-    Title = "InvestMuse Blog"
-    Content = "Professional investment analysis insights, tips, and market intelligence"
-
-[[params.socialIcons]]
-  name = "twitter"
-  url = "https://twitter.com/InvestMuseIO"
-
-[[params.socialIcons]]
-  name = "linkedin"
-  url = "https://linkedin.com/company/investmuse"
-
-[[menu.main]]
-  identifier = "home"
-  name = "InvestMuse App"
-  url = "https://investmuse.io"
-  weight = 10
-
-[[menu.main]]
-  identifier = "about"
-  name = "About"
-  url = "/about/"
-  weight = 20
-
-[markup.goldmark.renderer]
-  unsafe = true
+[menu]
+  [[menu.main]]
+    name = "InvestMuse App"
+    url = "https://investmuse.io"
+    weight = 1
+  [[menu.main]]  
+    name = "About"
+    url = "/about/"
+    weight = 2
