--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://investmuse.io/blog'
 languageCode = 'en-us'
 title = 'InvestMuse Blog'
-theme = 'hermit'
+theme = 'investmuse'
 
 [params]
   dateform        = "Jan 2, 2006"
